--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.card-body-stars {
+  display: flex;
+  list-style-type: none;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
